--- a/css/InicioStyle.css
+++ b/css/InicioStyle.css
@@ -18,7 +18,7 @@ body{
 }
 .analizador{
     text-align: center;
-    margin-top: 0;
+    margin-top: 10;
     color:  rgba(200, 0, 200, 7);
 }
 .analizador_input{
@@ -39,7 +39,7 @@ body{
 #salidaErrores{
     position: relative;
     top: 35px;
-    right: 150px;
+    right: 200px;
     font-weight: bold;
     background-color: rgba(255, 0, 0, 0.10) ;
     border-color: red;
@@ -47,8 +47,8 @@ body{
 }
 #salidaTokens{
     position: relative;
-    top: 35px;
-    right: 150px;
+    top: -483px;
+    right: -590px;
     font-weight: bold;
     background-color: rgba(0, 0, 255, 0.10) ;
     border-color: blue;
@@ -65,7 +65,7 @@ body{
 #lblErrores{
     position: relative;
     bottom: 430px;
-    right: 70px;
+    right: 120px;
     font-size: 0.5cm;
     font-weight: bold;
     color: red;
@@ -73,7 +73,7 @@ body{
 #lblTokens{
     position: relative;
     bottom: 430px;
-    right: 20px;
+    right: 150px;
     font-size: 0.5cm;
     font-weight: bold;
     color: blue;
@@ -81,9 +81,26 @@ body{
 #btnAnalizar{
     position: relative;
     bottom: 390px;
-    right: 110px;
+    right: 160px;
     font-size: 0.5cm;
     background-color: rgba(0, 255, 0, 0.10);
     color: rgb(0, 255, 0);
     border-color: rgb(0, 255, 0);
+}
+#lblTexto{
+    position: relative;
+    bottom: 850px;
+    right: 320px;
+    font-size: 0.5cm;
+    font-weight: bold;
+    color: green;
+}
+#salidaTexto{
+    position: relative;
+    top: -483px;
+    right: 460px;
+    font-weight: bold;
+    background-color: rgba(0, 255, 0, 0.1) ;
+    border-color: green;
+    color: green;
 }
